--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ plugins {
 group 'net.erenalyoruk'
 version '1.0-SNAPSHOT'
 
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
 javafx {
 	version = '19'
 	modules = [ 'javafx.controls', 'javafx.fxml' ]
@@ -58,6 +63,10 @@ dependencies {
 	implementation 'org.hibernate.orm:hibernate-hikaricp:6.1.5.Final'
 	implementation 'com.h2database:h2:2.1.214'
 	implementation 'com.zaxxer:HikariCP:5.0.1'
+	implementation 'com.google.guava:guava:31.1-jre'
+
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
