--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,13 @@ spotless {
 	}
 
 	java {
-		googleJavaFormat().aosp().reflowLongStrings()
+		googleJavaFormat().aosp()
+		prettier(['prettier': '2.0.5', 'prettier-plugin-java': '0.8.0']).config([
+			'parser': 'java',
+			'tabWidth': 4,
+			'printWidth': 120,
+			'singleQuote': false,
+		])
 		formatAnnotations()
 		importOrder()
 		trimTrailingWhitespace()
