removed npm requirement

--- a/build.gradle
+++ b/build.gradle
@@ -49,13 +49,7 @@ spotless {
 	}
 
 	java {
-		googleJavaFormat().aosp()
-		prettier(['prettier': '2.0.5', 'prettier-plugin-java': '0.8.0']).config([
-			'parser': 'java',
-			'tabWidth': 4,
-			'printWidth': 120,
-			'singleQuote': false,
-		])
+		googleJavaFormat().aosp().reflowLongStrings()
 		formatAnnotations()
 		importOrder()
 		trimTrailingWhitespace()
